--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Blank PHP Heroku Project",
-  "description": "Blank PHP Project for Quick deploy to Heroku with partial NOB API implemented",
-  "repository": "https://github.com/nobodyrandom/blank-bootstrap.git",
+  "name": "Queen'sDevFoundation",
+  "description": "Developer's Foundation Queen's Website",
+  "repository": "https://github.com/SirLeonardIV/QueensDevFound.git",
   "logo": "https://developersfoundation.ca/assets/img/logo.png",
-  "keywords": ["php", "heroku", "blank", "template", "nob"]
+  "keywords": ["php", "heroku", "blank", "template","queens"]
 }
